--- a/src/assets/styles/font.css
+++ b/src/assets/styles/font.css
@@ -1,64 +1,27 @@
-/* @font-face {
-    font-family: "Neue Machina Inktrap";
-    src: url("/fonts/PPNeueMachina-InktrapThin.ttf"),
-        url("/fonts/PPNeueMachina-InktrapThin.ttf") format("ttf");
-    font-weight: 100;
-    font-style: normal;
-} */
-
 /* -- Light -- */
 @font-face {
-    font-family: "Neue Machina Inktrap";
-    src: url("/fonts/PPNeueMachina-InktrapLight.ttf"),
-        url("/fonts/PPNeueMachina-InktrapLight.ttf") format("ttf");
+    font-family: "Neue Machina";
+    src: url("/fonts/NeueMachina-Light.0tf"),
+        url("/fonts/NeueMachina-Light.0tf") format("0tf");
+
     font-weight: 300;
     font-style: normal;
 }
 
 /* -- Normal -- */
 @font-face {
-    font-family: "Neue Machina Inktrap";
-    src: url("/fonts/PPNeueMachina-InktrapRegular.otf"),
-        url("/fonts/PPNeueMachina-InktrapRegular.otf") format("otf");
+    font-family: "Neue Machina";
+    src: url("/fonts/NeueMachina-Regular.otf"),
+        url("/fonts/NeueMachina-Regular.otf") format("otf");
+
     font-weight: 400;
     font-style: normal;
 }
-
-/* -- Medium -- */
-@font-face {
-    font-family: "Neue Machina Inktrap";
-    src: url("/fonts/PPNeueMachina-PlainRegular.otf"),
-        url("/fonts/PPNeueMachina-PlainRegular.otf") format("otf");
-    font-weight: 500;
-    font-style: normal;
-}
-
-
-/* -- DemiBold -- */
-
-/* @font-face {
-  font-family: "Neue Machina Inktrap";
-  src: url("/fonts/Neue Machina Inktrap DemiBold.ttf"),
-    url("/fonts/Neue Machina Inktrap DemiBold.ttf") format("ttf");
-  font-weight: 500;
-  font-style: normal;
-} */
-
-
-/* -- Bold -- */
-@font-face {
-    font-family: "Neue Machina Inktrap";
-    src: url("/fonts/PPNeueMachina-InktrapUltrabold.otf"),
-        url("/fonts/PPNeueMachina-InktrapUltrabold.otf") format("ttf");
-    font-weight: 700;
-    font-style: normal;
-}
-
 /* -- Extra bold -- */
 @font-face {
-    font-family: "Neue Machina Inktrap";
-    src: url("/fonts/PPNeueMachina-PlainUltrabold.otf"),
-        url("/fonts/PPNeueMachina-PlainUltrabold.otf") format("otf");
+    font-family: "Neue Machina";
+    src: url("/fonts/NeueMachina-Ultrabold.otf"),
+        url("/fonts/NeueMachina-Ultrabold.otf") format("otf");
     font-weight: 800;
     font-style: normal;
 }
