--- a/src/index.css
+++ b/src/index.css
@@ -32,15 +32,13 @@ html.lenis body {
 
   .noisy-bg {
     background-image: url("/Noisy-Background.svg");
-
   }
 
   :root {
-    --primary: #FF4800;
-    --secondary: #1D1D1D;
-    --background: #E2DDD6;
-    font-family: "Neue Machina", system-ui,
-      sans-serif;
+    --primary: #ff4800;
+    --secondary: #1d1d1d;
+    --background: #e2ddd6;
+    font-family: "Neue Machina", system-ui, sans-serif;
     color-scheme: light dark;
     color: var(--secondary);
     background-color: var(--background);
@@ -51,7 +49,7 @@ html.lenis body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
+    scroll-behavior: smooth;
 
     /* spacing */
 
@@ -74,9 +72,7 @@ html.lenis body {
     --sp16: 192px;
     --sp17: 224px;
     --sp18: 256px;
-
   }
-
 
   a {
     @apply no-underline;
@@ -88,37 +84,37 @@ html.lenis body {
 @layer base {
   .heading-1 {
     @apply text-[5.375rem] leading-[91px] -tracking-[2px]
-    /*  font-size: 86px */
+    /*  font-size: 86px */;
   }
 
   .heading-2 {
     @apply text-[3.5rem] leading-[53px] -tracking-wider
-    /*  font-size: 56px */
+    /*  font-size: 56px */;
   }
 
   .heading-3 {
     @apply text-[2.875rem] leading-[47px] -tracking-wider
-    /*  font-size: 46px */
+    /*  font-size: 46px */;
   }
 
   .title-1 {
     @apply text-[2rem] leading-[40px] -tracking-wider
-    /*  font-size: 32px */
+    /*  font-size: 32px */;
   }
 
   .title-2 {
     @apply text-[1.75rem] leading-[33px] -tracking-wider
-    /*  font-size: 28px */
+    /*  font-size: 28px */;
   }
 
   .title-3 {
     @apply text-[1.375rem] leading-[27px] -tracking-wider
-    /*  font-size: 22px */
+    /*  font-size: 22px */;
   }
 
   .title-4 {
     @apply text-[1.25rem] leading-[24px] -tracking-wider
-    /*  font-size: 20px */
+    /*  font-size: 20px */;
   }
 
   h1 {
